--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "bcryptjs": "^2.4.3",
     "concurrently": "^6.2.0",
     "firebase": "^8.6.5",
     "json-server": "^0.16.3",
